AoC19 Day14 draft